--- a/Bai4.html
+++ b/Bai4.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .a {
+            background-color: #FFCC66;
+            width: fit-content;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,7 +30,7 @@
             <li>Item Five</li>
         </ol>
     </div>
-    <div>
+    <div class="a">
         <ol type="I" start="1">
             <li>Oakfield Middle School
                 <ol type="A" start="1">
